@@ -1,3 +1,6 @@
+  - Fix debug-perl asertion failure in Span->copy_to when copying from buffer
+    of capacity=0
+
 Version 0.011 - 2025-12-02
   - Fix bug in parsing strings of '$encoding' parameters that could return
     an uninitialized value for an invalid encoding.
